[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black>=23.3.0", "flake8>=6.0.0", "isort>=5.12.0", "pytest>=7.3.1"]

[project]
name = "ewal_api"
version = "0.1.0"
description = ""
authors = [{ name = "Oracen", email = "alex.stenlake@gmail.com" }]
dependencies = [
    "pydantic>=1.10.7",
    "openai>=0.27.6",
    "Jinja2>=3.1.2",
    "fastapi[all]>=0.95.2",
]
requires-python = ">=3.10"
license = { text = "MIT" }


[tool.pdm.scripts]
start-app = { shell = "streamlit run ./app/Home.py" }
run-example = { shell = "streamlit run ./app/Home.py" }
checker = { call = "arg_checker.run:main" }
git-hooks = { shell = "pre-commit install --install-hooks && pre-commit install --hook-type commit-msg" }
test = { shell = "pytest ." }
autoflake-fix = { cmd = "autoflake ." }
black-fix = { cmd = "black ." }
isort-fix = { cmd = "isort ." }
flake8-check = { cmd = "flake8 ." }
black-check = { cmd = "black --check ." }
isort-check = { cmd = "isort --check-only ." }
mypy-check = "mypy --namespace-packages --check-untyped-defs ."
format = { composite = ["autoflake-fix", "black-fix", "isort-fix"] }
lint = { composite = [
    "mypy-check",
    "flake8-check",
    "black-check",
    "isort-check",
] }


[tool.isort]
multi_line_output = 3
force_to_top = ["os", "sys"]
profile = "black"
skip_gitignore = true

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-unused-variables = true
ignore-pass-statements = false
